--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,6 @@
 @import 'bootstrap/_config.scss';
 
-@import 'component/progress-meter.scss'
+@import 'component/progress-meter.scss';
+
+@import 'layout/navigation.scss';
+@import 'layout/container.scss'
