--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,7 @@
 @import 'bootstrap/_config.scss';
 
 @import 'component/progress-meter.scss';
+@import 'component/participation-types.scss';
 
 @import 'layout/navigation.scss';
 @import 'layout/container.scss'
