--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,7 @@
 
 @import 'component/progress-meter.scss';
 @import 'component/participation-types.scss';
+@import 'component/top-list.scss';
 
 @import 'layout/navigation.scss';
 @import 'layout/container.scss'
