--- a/src/app/sass/main.scss
+++ b/src/app/sass/main.scss
@@ -13,5 +13,6 @@
 @import 'component/progress-meter.scss';
 @import 'component/participation-types.scss';
 @import 'component/roster-list.scss';
+@import 'component/team-list-search.scss';
 @import 'component/top-list.scss';
 
