--- a/src/documentation/html/view/roster-list.html
+++ b/src/documentation/html/view/roster-list.html
@@ -1,15 +1,16 @@
+
 <h2>Roster List</h2>
 <p>Generate roster list of participants or teams with amounts raised. Can be filtered by Team or Company id.</p>
-<div component-table component="rosterList"></div>
+<div component-table component="teamListSearch"></div>
 <div class="documentation__examples">
   <h3>Examples</h3>
 
   <div class="documentation__example">
-  	<p>Pull Team Participants showing amounts and applying striped results.</p>
-  	 <code>
-      &lt;div roster-list type="teamParticipants" fr-id="1070" id="1071" show-badges="true" table-stripe="true"&gt;
+    <p>Default Team Search.</p>
+     <code>
+      &lt;team-list-search fr-id="1070" show-badges="true" table-stripe="true"&gt;
     </code>
-    <div roster-list type="teamParticipants" fr-id="1070" id="1071" show-badges="true" table-stripe="true"></div>
+    <div team-list-search fr-id="1070" show-badges="true" table-stripe="true"></div>
   </div>
 
    <div class="documentation__example">
@@ -21,12 +22,15 @@
   </div>
 
    <div class="documentation__example">
-  	<p>Pull Company Teams and including search.</p>
-  	 <code>
+    <p>Pull Company Teams and including search.</p>
+     <code>
       &lt;div roster-list type="companyTeams" fr-id="1070" id="1013" show-badges="true" include-search="true"&gt;&lt;/div&gt;
     </code>
     <div roster-list type="companyTeams" fr-id="1070" id="1013" show-badges="true"  include-search="true"></div>
   </div>
 </div>
+
+
+
 
 
